Added introductory report section

--- a/report/Relatório Final.html
+++ b/report/Relatório Final.html
@@ -21,6 +21,17 @@
 			<div class="paragraph">
 				Focaremos em analisar dados da Organização Mundial da Saúde sobre a tuberculose, limitado a países da América do Sul, entre os anos 2000 e 2019.
 			</div>
+			<h3>Motivação</h3>
+			<div class="paragraph">
+				O grupo decidiu se afastar de pesquisas diretamente relacionadas à pandemia atualmente em curso no globo, e preferiu estudar sobre outras doenças que mazelam o mundo e que ficaram em segundo plano. O conjunto de dados da OMS sobre tuberculose é completo e compreensivo, e permite levantar questionamentos interessantes de serem respondidos através da aplicação de ciência dos dados.
+			</div>
+			<h3>Perguntas</h3>
+			<div class="paragraph">
+				<span>1 - É possível traçar um perfil entre a quantidade de casos de tuberculose e o tamanho da população?</span>
+				<span>2 - A quantidade de pessoas infectadas com hiv afeta a quantidade de óbitos por Tuberculose?</span>
+				<span>3 - Qual país combateu a Tuberculose com mais eficácia nos últimos anos?</span>
+				<span>4 - É possível traçar um perfil entre a quantidade de novos casos ou casos de reinfecção com a quantidade de óbitos?</span>
+			</div>
 		</div>
 	</body>
 </html>
