Add exploratory analysis section to report

--- a/report/Relatório Final.html
+++ b/report/Relatório Final.html
@@ -47,6 +47,44 @@
 			<div class="paragraph">
 				A base da OMS é extensa, seu dicionário de dados listando mais de 500 variáveis, muitas desnecessárias para a execução deste estudo. Além disso, possuem dados de todos os países, o que excede o escopo proposto. Realizamos um aparo da base de dados, facilitando a visualização e uso dos mesmos e restringindo os dados aos países da América do Sul.
 			</div>
+			<h3>V. Análise Exploratória</h3>
+			<div class="paragraph">
+				<span>Daqui em diante seguiremos as escolhas de apresentação utilizadas no trabalho de exemplo disponibilizado pelo professor. Nessa seção mostraremos as tendências principais pertinentes para as análises que serão realizadas.</span>
+			</div>
+			<h4>Número total de casos por ano</h4>
+			<div class="paragraph">
+				<img src='figures/analise_1.png'/>
+				<span>Podemos observar que a faixa de erro que a OMS atribui aos dados é muito grande, e que o número de casos ao longo dos anos foi estável, apresentando uma leve tendência decrescente na primeira década e crescente na segunda.</span>
+			</div>
+			<h4>Número de casos por ano por país</h4>
+			<div class="paragraph">
+				<img src='figures/analise_2.png'/>
+				<span>A população varia muito entre os diversos países; O Brasil em particular possui aproximadamente metade da população da América do Sul e por isso possui muito mais casos totais que os demais países analisados individualmente.</span>
+				<img src='figures/analise_3.png'/>
+				<span>Casos a cada 100 mil habitantes é uma métrica mais interessante, que permite uma comparação mais justa entre países. Em particular observa-se que Peru, Bolívia e Guiana possuem, proporcionalmente, muito mais casos que os demais países, e uma faixa de erro também muito mais expressiva.</span>
+			</div>
+			<h4>Número estimado de mortes por ano por país</h4>
+			<div class="paragraph">
+				<img src='figures/analise_4.png'/>
+				<span>Aqui observamos o número médio estimado de mortes, e quantas dessas foram comórbidas com HIV. Na maioria dos países ambas as variáveis parecem seguir a mesma tendência, com o detalhe que em países como Guiana e Bolívia podemos observar que a mortalidade geral cresce e cai proporcionalmente mais do que a mortalidade comórbida com HIV.</span>
+				<span>Além disso, é observado o decrescimento proporcional significativo nos últimos anos no número de casos na Bolívia, no Equador e no Peru, e a aparente dificuldade da Guiana em controlar a doença.</span>
+				<img src='figures/analise_5.png'/>
+				<img src='figures/analise_6.png'/>
+				<span>Finalmente, analisamos o percentual de mortes por tuberculose que foram comórbidas com HIV, e podemos observar uma tendência geral de crescimento. Além disso podemos ver que o número de mortes comórbidas com HIV por 100 mil habitantes é estável na maioria dos países. Observando isso e as tendências anteriores, podemos concluir que, conforme os países combatem a doença e conseguem diminuir o número total de mortes, o número de mortes de infectados que são HIV-positivos tende a se manter o mesmo, aumentando em percentual conforme o total diminui.</span>
+			</div>
+			<h4>Total de novos casos e reinfecção por ano por país</h4>
+			<div class="paragraph">
+				<img src='figures/analise_7.png'/>
+				<span>Ao comparar o número de novos casos/reinfecções com o total de casos por ano observamos que, na maioria dos países, a maioria dos casos ativos em um ano são casos novos. Fogem da tendência os três países que inicialmente observamos terem uma quantidade expressiva de casos, quando comparados aos demais: Peru, Bolívia e Guiana. Isso implica que uma grande quantidade de casos está passando para o ano seguinte antes de serem curados.</span>
+			</div>
+			<span>Cobertura de Tratamento</span>
+			<div class="paragraph">
+				<img src='figures/analise_8.png'/>
+				<span>Aqui podemos ver a eficácia de detecção e tratamento de casos de cada país. Podemos separar em três grupos:
+Países como Brasil, Uruguai e Argentina, que detectam e tratam mais que 80% dos casos;
+Países como Equador, Guiana e Suriname, que detectam e tratam aproximadamente 80% dos casos;
+A Bolívia, que trata menos de 70% dos casos, e hoje aproxima-se de 60% de eficácia.</span>
+			</div>
 		</div>
 	</body>
 </html>
