Fixed some styling issues

--- a/report/Relatório Final.html
+++ b/report/Relatório Final.html
@@ -41,7 +41,7 @@
 				<span><b>Descrição:</b> Base de dados completa gerada pela OMS para o *Global Tuberculosis Report* (Relatório Global sobre a Tuberculose). Inclui estimativas de mortalidade, incidência de casos, taxa de mortalidade, cobertura de tratamento, status de HIV e diversas outras informações clínicas, para todos os países incluídos no relatório, a partir do ano 2000.</span>
 				<span>Inclui-se um dicionário de dados contendo os nomes das variáveis do conjunto de dados e suas definições.</span>
 				<span><b>Fonte:</b> <a href='https://www.who.int/tb/country/data/download/en/'>WHO TB burden estimates</a></span>
-				<span><b>Arquivos:</b> A base de dados disponibilizada encontra-se em `/data/raw/TB_burden_countries_2020-11-01.csv`, e o dicionário de dados em `/data/raw/TB_data_dictionary_2020-11-01`.</span>
+				<span><b>Arquivos:</b> A base de dados disponibilizada encontra-se em <i class='code'>/data/raw/TB_burden_countries_2020-11-01.csv</i>, e o dicionário de dados em <i class='code'>/data/raw/TB_data_dictionary_2020-11-01</i>.</span>
 			</div>
 			<h4>Limpeza de Dados</h4>
 			<div class="paragraph">
