Updating youtube link

--- a/report/Relatório Final.html
+++ b/report/Relatório Final.html
@@ -14,7 +14,7 @@
 			</div>
 			<h3>Links Externos</h3>
 			<div class="paragraph">
-				<span>Vídeo: <a href="https://youtu.be/Ve_3US1noj4">Youtube</a></span>
+				<span>Vídeo: <a href="https://youtu.be/n12dq6D9m88">Youtube</a></span>
 				<span>Github: <a href="https://github.com/vihainen/ICD_Tuberculose">ICD_Tuberculose</a></span>
 			</div>
 			<h3>I. Introdução</h3>
